# WishListManager4ReaderStore

./: LICENSE  README.md  pyproject.toml
src/wishlistmanger4readerstore/: __init__.py  __main__.py
