[project]
name = "wishlistmanger4readerstore"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Masahiro HASEGAWA", email = "masahase@gmail.com" }
]
dependencies = [
    "selenium>=4.25.0",
    "beautifulsoup4>=4.12.3",
]
readme = "README.md"
requires-python = ">= 3.7"
license = { text = "BSD-3-Clause" }

[project.scripts]
"wishlistmanger4readerstore" = "wishlistmanger4readerstore:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.8.0",
    "flake8>=7.1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/wishlistmanger4readerstore"]
